--- a/LoanManagementSystem/Views/AccountBooks/Create.cshtml
+++ b/LoanManagementSystem/Views/AccountBooks/Create.cshtml
@@ -1,8 +1,22 @@
 ﻿@model Data.Models.Accounts.sdtoAccountBook
 
 @{
-    ViewBag.Title = "Create Account Books";    
+    ViewBag.Title = "Create Account Books";
 }
+
+<script language="javascript" type="text/javascript">
+
+    $(document).ready(function () {
+        $('#ddlAccountBookType').change(function () {
+            if ($('#ddlAccountBookType').val() == "3")
+                $('#dvAccHeads').hide();
+            else
+                $('#dvAccHeads').show();
+        });
+    })
+
+</script>
+
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -13,7 +27,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.BookCode, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.BookCode, new { htmlAttributes = new {  } })
+                @Html.EditorFor(model => model.BookCode, new { htmlAttributes = new { } })
                 @Html.ValidationMessageFor(model => model.BookCode, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -21,7 +35,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.BookName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.BookName, new { htmlAttributes = new {  } })
+                @Html.EditorFor(model => model.BookName, new { htmlAttributes = new { } })
                 @Html.ValidationMessageFor(model => model.BookName, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -29,7 +43,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.BookDescription, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextAreaFor(model => model.BookDescription, new { htmlAttributes = new {  } })
+                @Html.TextAreaFor(model => model.BookDescription, new { htmlAttributes = new { } })
                 @Html.ValidationMessageFor(model => model.BookDescription, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -37,39 +51,40 @@
         <div class="form-group">
             @Html.LabelFor(model => model.AccountBookTypeId, "AccountBookTypeId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("AccountBookTypeId", null, htmlAttributes: new {  })
+                @Html.DropDownList("AccountBookTypeId", null, htmlAttributes: new { @id = "ddlAccountBookType" })
                 @Html.ValidationMessageFor(model => model.AccountBookTypeId, "", new { @class = "text-danger" })
             </div>
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.AccountHeadId, "AccountHeadId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("AccountHeadId", (SelectList)ViewBag.AccountHeadId, htmlAttributes: new {  })
-                @Html.ValidationMessageFor(model => model.AccountHeadId, "", new { @class = "text-danger" })
+        <div id="dvAccHeads">
+            <div class="form-group">
+                @Html.LabelFor(model => model.AccountHeadId, "AccountHeadId", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.DropDownList("AccountHeadId", (SelectList)ViewBag.AccountHeadId, htmlAttributes: new { })
+                    @Html.ValidationMessageFor(model => model.AccountHeadId, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.BankInterest, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.BankInterest, new { htmlAttributes = new {  @Value = ViewBag.BankInterest } })
-                @Html.ValidationMessageFor(model => model.BankInterest, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.LabelFor(model => model.BankInterest, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.BankInterest, new { htmlAttributes = new { @Value = ViewBag.BankInterest } })
+                    @Html.ValidationMessageFor(model => model.BankInterest, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.BankCharges, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.BankCharges, new { htmlAttributes = new {  @Value = ViewBag.BankCharges } })
-                @Html.ValidationMessageFor(model => model.BankCharges, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.LabelFor(model => model.BankCharges, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.BankCharges, new { htmlAttributes = new { @Value = ViewBag.BankCharges } })
+                    @Html.ValidationMessageFor(model => model.BankCharges, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.ReceiptVoucherPrefix, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ReceiptVoucherPrefix, new { htmlAttributes = new {  } })
+                @Html.EditorFor(model => model.ReceiptVoucherPrefix, new { htmlAttributes = new { } })
                 @Html.ValidationMessageFor(model => model.ReceiptVoucherPrefix, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -77,7 +92,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ReceiptVoucherSuffix, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ReceiptVoucherSuffix, new { htmlAttributes = new {  } })
+                @Html.EditorFor(model => model.ReceiptVoucherSuffix, new { htmlAttributes = new { } })
                 @Html.ValidationMessageFor(model => model.ReceiptVoucherSuffix, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -85,7 +100,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.PaymentVoucherPrefix, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PaymentVoucherPrefix, new { htmlAttributes = new {  } })
+                @Html.EditorFor(model => model.PaymentVoucherPrefix, new { htmlAttributes = new { } })
                 @Html.ValidationMessageFor(model => model.PaymentVoucherPrefix, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -93,7 +108,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.PaymentVoucherSuffix, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PaymentVoucherSuffix, new { htmlAttributes = new {  } })
+                @Html.EditorFor(model => model.PaymentVoucherSuffix, new { htmlAttributes = new { } })
                 @Html.ValidationMessageFor(model => model.PaymentVoucherSuffix, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -101,7 +116,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.Status, htmlAttributes: new {  })
+                @Html.EnumDropDownListFor(model => model.Status, htmlAttributes: new { })
                 @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
             </div>
         </div>
