--- a/LoanManagementSystem/Views/Settings/Edit.cshtml
+++ b/LoanManagementSystem/Views/Settings/Edit.cshtml
@@ -2,50 +2,147 @@
 
 @{
     ViewBag.Title = "Edit Settings";
-    
+
 }
- 
+
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-
-    <div class="form-horizontal"> 
+    <div class="col-md-10 form-horizontal">
+        <h4>General Settings</h4>
         <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.SettingsId)
+        <div class="col-md-5 form-horizontal">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.SettingsId)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.CompanyId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownListFor(model => model.CompanyId, (SelectList)ViewBag.CompanyList, new { htmlAttributes = new {  } })
-                @Html.ValidationMessageFor(model => model.CompanyId, "", new { @class = "text-danger" })
+            <div class="form-group">
+                <div class="col-md-10">
+                    @Html.LabelFor(model => model.CompanyId, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.DropDownListFor(model => model.CompanyId, (SelectList)ViewBag.CompanyList, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.CompanyId, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-10">
+                    @Html.LabelFor(model => model.AssetScheduleId, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.DropDownListFor(x => x.AssetScheduleId, (SelectList)ViewBag.AssetScheduleList, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.AssetScheduleId, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
+        <div class="col-md-5 form-horizontal">
+            <div class="form-group">
+                <div class="col-md-10">
+                    @Html.LabelFor(model => model.BankInterest, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.EditorFor(model => model.BankInterest, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.BankInterest, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.AssetScheduleId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownListFor(x => x.AssetScheduleId, (SelectList)ViewBag.ScheduleList)
-                @Html.ValidationMessageFor(model => model.AssetScheduleId, "", new { @class = "text-danger" })
+            <div class="form-group">
+                <div class="col-md-10">
+                    @Html.LabelFor(model => model.BankCharges, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.EditorFor(model => model.BankCharges, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.BankCharges, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <div class="col-md-10 form-horizontal">
+        <h4>Accounts Settings</h4>
+        <hr />
+        <div class="col-md-5 form-horizontal">
+            <div class="form-group">
+                <div class="col-md-10">
+                    @Html.LabelFor(model => model.SalesAccountId, htmlAttributes: new { @class = "control-label" })
+                    @Html.DropDownListFor(model => model.SalesAccountId, (SelectList)ViewBag.AccountList, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.SalesAccountId, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-md-10">
+                    @Html.LabelFor(model => model.PurchaseAccountId, htmlAttributes: new { @class = "control-label" })
+                    @Html.DropDownListFor(model => model.PurchaseAccountId, (SelectList)ViewBag.AccountList, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.PurchaseAccountId, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-md-10">
+                    @Html.LabelFor(model => model.DiscountAccountId, htmlAttributes: new { @class = "control-label" })
+                    @Html.DropDownListFor(model => model.DiscountAccountId, (SelectList)ViewBag.AccountList, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.DiscountAccountId, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-md-10">
+                    @Html.LabelFor(model => model.SundryDebtorAccountId, htmlAttributes: new { @class = "control-label" })
+                    @Html.DropDownListFor(model => model.SundryDebtorAccountId, (SelectList)ViewBag.AccountList, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.SundryDebtorAccountId, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-md-10">
+                    @Html.LabelFor(model => model.SundryCreditorAccountId, htmlAttributes: new { @class = "control-label" })
+                    @Html.DropDownListFor(model => model.SundryCreditorAccountId, (SelectList)ViewBag.AccountList, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.SundryCreditorAccountId, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-md-10">
+                    @Html.LabelFor(model => model.SalesJournalId, htmlAttributes: new { @class = "control-label" })
+                    @Html.DropDownListFor(model => model.SalesJournalId, (SelectList)ViewBag.BookList, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.SalesJournalId, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.BankInterest, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.BankInterest, new { htmlAttributes = new {  } })
-                @Html.ValidationMessageFor(model => model.BankInterest, "", new { @class = "text-danger" })
+        <div class="col-md-5 form-horizontal">
+            <div class="form-group">
+                <div class="col-md-10">
+                    @Html.LabelFor(model => model.PLExpenseScheduleId, htmlAttributes: new { @class = "control-label" })
+                    @Html.DropDownListFor(model => model.PLExpenseScheduleId, (SelectList)ViewBag.ScheduleList, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.PLExpenseScheduleId, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-md-10">
+                    @Html.LabelFor(model => model.PLIncomeScheduleId, htmlAttributes: new { @class = "control-label" })
+                    @Html.DropDownListFor(model => model.PLIncomeScheduleId, (SelectList)ViewBag.ScheduleList, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.PLIncomeScheduleId, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-md-10">
+                    @Html.LabelFor(model => model.TradingExpenseScheduleId, htmlAttributes: new { @class = "control-label" })
+                    @Html.DropDownListFor(model => model.TradingExpenseScheduleId, (SelectList)ViewBag.ScheduleList, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.TradingExpenseScheduleId, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-md-10">
+                    @Html.LabelFor(model => model.TradingIncomeScheduleId, htmlAttributes: new { @class = "control-label" })
+                    @Html.DropDownListFor(model => model.TradingIncomeScheduleId, (SelectList)ViewBag.ScheduleList, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.TradingIncomeScheduleId, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-md-10">
+                    @Html.LabelFor(model => model.CashBookId, htmlAttributes: new { @class = "control-label" })
+                    @Html.DropDownListFor(model => model.CashBookId, (SelectList)ViewBag.BookList, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.CashBookId, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-md-10">
+                    @Html.LabelFor(model => model.PurchaseJournalId, htmlAttributes: new { @class = "control-label" })
+                    @Html.DropDownListFor(model => model.PurchaseJournalId, (SelectList)ViewBag.BookList, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.PurchaseJournalId, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.BankCharges, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.BankCharges, new { htmlAttributes = new {  } })
-                @Html.ValidationMessageFor(model => model.BankCharges, "", new { @class = "text-danger" })
-            </div>
-        </div>        
-
+    </div>
+    <div class="col-md-10 form-horizontal">
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
