--- a/LoanManagementSystem/Views/Settings/Edit.cshtml
+++ b/LoanManagementSystem/Views/Settings/Edit.cshtml
@@ -46,9 +46,7 @@
                     @Html.EditorFor(model => model.BankCharges, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.BankCharges, "", new { @class = "text-danger" })
                 </div>
-            </div>
-
-        </div>
+            </div>      </div>
     </div>
     <div class="col-md-10 form-horizontal">
         <h4>Accounts Settings</h4>
